refactoring and some bugs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,5 +16,10 @@
             "mainClass": "demo.contract.App",
             "projectName": "ms-contract"
         }
+    ],"compounds": [
+        {
+            "name": "all",
+            "configurations": ["ms-contract","ms-customer"]
+        }
     ]
 }
