--- a/ms-contract/src-r/application.properties
+++ b/ms-contract/src-r/application.properties
@@ -1,7 +1,7 @@
 server.port=8082
 spring.application.name=ms-contract
 
-spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.uri=mongodb://localhost:27017/db3
 
 resilience4j.circuitbreaker.instances.default.register-health-indicator=true
 resilience4j.circuitbreaker.instances.default.sliding-window-size=10
@@ -13,4 +13,4 @@ resilience4j.retry.instances.default.max-attempts=3
 resilience4j.retry.instances.default.wait-duration=500ms
 resilience4j.timelimiter.instances.default.timeout-duration=4s
 
-integration.client.base-url='http://localhost:8081/clients'
+integration.client-service.base-url=http://localhost:8081
