--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
-    // "files.exclude": {
-    //     "**/.gradle/" : true,
-    //     "**/build/" : true,
-    // },
+    "files.exclude": {
+        "**/.gradle/" : true,
+        "**/build/" : true,
+    },
     "java.configuration.updateBuildConfiguration": "interactive"
 }
