--- a/ms-client/build.gradle
+++ b/ms-client/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'java'
+	id 'jacoco'
 	id 'org.springframework.boot' version '3.4.6'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -17,10 +18,15 @@ repositories {
 }
 
 dependencies {
+	
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+    implementation 'org.postgresql:postgresql'
+
     implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.3.0'
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
@@ -30,6 +36,7 @@ sourceSets {
 	test.java.srcDirs = ['tst']
 	test.resources.srcDirs = ['tst-r']
 }
+
 
 test {
     testLogging.events = ["passed", "skipped", "failed"]
